Sets z-index of header to ensure it's always above price stickers

--- a/_src/styles/_header.scss
+++ b/_src/styles/_header.scss
@@ -7,6 +7,7 @@
   left:0;
   width: 100%;
   width: 100vw;
+  z-index: 999;
   background: transparentize($pageBackgroundColor, .05);
 
   .container {
